Fri Feb  1 15:13:31 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * tao/AnyTypeCode/Any_Dual_Impl_T.h:
        * tao/AnyTypeCode/Any_Dual_Impl_T.cpp:

          Fixed bug 4082: allows extraction to type that's equivalent
          but not equal, as required by the spec.  The common example
          is different sequences with the same base type.

        * bin/tao_orb_tests.lst:
        * tests/Bug_4082_Regression/run_test.pl:

          Added test script and removed condition for !FIXED_BUGS_ONLY.

Thu Jan 31 17:46:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Mcast_Transport.cpp:
          Remove any unprocessed but dequeued/completed messages at shutdown.

Wed Jan 30 12:44:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>

        * tao/GIOP_Message_Base.cpp:
          Fix a memory leak of a datablock due to ZIOP decompression (possiably)
          replacing it. If replaced the original db may need to be released and
          the new db always does.

Tue Jan 29 11:00:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvcs/tests/Miop/McastFragmentation/run_test.pl:
        * orbsvcs/tests/Miop/McastFragmentation/run_test_ipv6.pl:
        * orbsvcs/tests/Miop/McastFragmentation/client.cpp:
        * orbsvcs/tests/Miop/McastFragmentation/uipmc_client.conf:
        * orbsvcs/tests/Miop/McastFragmentation/uipmc_server.conf:
        * orbsvcs/tests/Miop/McastFragmentation/uipmc_server_n.conf:
        * orbsvcs/tests/Miop/McastFragmentation/uipmc_server_m.conf:
          Minor timing/tuning adjustments and updates.

Tue Jan 29 07:55:44 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/ch_21/client.cpp:
          One more compile fix when ostream is disabled

Mon Jan 28 18:51:42 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/ch_12/client.cpp:
        * examples/Advanced/ch_18/client.cpp: