@@ -1,3 +1,9 @@
+Tue Feb  5 13:46:00 UTC 2013  Simon Massey  <simon.massey@prismtech.com>
+
+        * docs/Options.html:
+
+          Typo corrections.
+
 Fri Feb  1 15:13:31 UTC 2013  Adam Mitz  <mitza@ociweb.com>
 
         * tao/AnyTypeCode/Any_Dual_Impl_T.h:
